# yt-game

./: Cargo.toml  index.html
pkg/: README.md  package.json  yt_game.d.ts  yt_game.js  yt_game_bg.js  yt_game_bg.wasm  yt_game_bg.wasm.d.ts
res/: blue_cube.json  blue_material.json  cube_material.json  cube_mesh.json  cube_model.json  gl_shader.wgsl  green_cube.json  green_material.json  material.json  pbr.wgsl  pbr_shader.wgsl  red_cube.json  red_material.json  shader.wgsl  template.wgsl  white_cube.json  white_material.json
src/: game.rs  input.rs  lib.rs  main.rs  math.rs  physics.rs  renderer.rs
src/game/: world.rs
src/input/: keyboard_input.rs  mouse_input.rs
src/physics/: bvh.rs  contact.rs  intersect.rs  rigid_body.rs  scene.rs  shape.rs  world.rs
src/physics/bvh/: aabb.rs  bounding_sphere.rs
src/physics/contact/: contact_cube_cube.rs  contact_cube_sphere.rs  contact_sphere_sphere.rs
src/physics/intersect/: intersect_sphere_sphere.rs
src/physics/shape/: cube.rs  sphere.rs
src/renderer/: ball_generator.rs  camera.rs  device.rs  entity.rs  instance.rs  light.rs  model.rs  render_pass.rs  resource.rs  scene.rs  texture.rs
src/renderer/model/: material.rs  mesh.rs  vertex.rs
src/renderer/render_pass/: camera_uniform_buffer.rs  light_uniform_buffer.rs  shadow.rs
src/renderer/render_pass/shadow/: cascaded_shadow.rs
src/shaders/: shader.wgsl
