[package]
name = "yt-game"
version = "0.1.0"
edition = "2021"

resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
webgl = ["wgpu/webgl",]

[dependencies]
instant = "0.1"
winit = "0.27.3"
raw-window-handle = "0.5"
env_logger = "0.9"
log = "0.4"
wgpu = { version = "0.14" }
pollster = "0.2"
nalgebra = "0.31"
generational-arena = "0.2"
bytemuck = { version = "1.4", features = ["derive"]}
anyhow = "1.0"
cfg-if = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


tobj = {version = "3.2.1", features = [ "async" ]}
[dependencies.image]
version = "0.23"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]
[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"


[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = "0.11"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
